[AGAA] Fix typo on folder name" [skip ci]

--- a/src/Notes/ComputerScience/CA/ECS/02.html
+++ b/src/Notes/ComputerScience/CA/ECS/02.html
@@ -1,9 +1,9 @@
 <html><head>
     <!-- Normal styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../src/style/index.css">
+    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../src/style/custom.css">
-    <title>Computer Science</title>
+    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/custom.css">
+    <title>Boolean Arithmetic</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,28 +31,12 @@
     <hr>
     <div class="content">
 <p>
-<a href="../index.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
-<div id="Computer Science"><h1 id="Computer Science" class="header"><a href="#Computer Science">Computer Science</a></h1></div>
+<div id="Boolean Arithmetic"><h1 id="Boolean Arithmetic" class="header"><a href="#Boolean Arithmetic">Boolean Arithmetic</a></h1></div>
 
 <hr>
-
-<div id="Computer Science-Computer Architecture"><h2 id="Computer Architecture" class="header"><a href="#Computer Science-Computer Architecture">Computer Architecture</a></h2></div>
-
-<ul>
-<li>
-<a href="CA/ECS/index.html">The Elements of Computer Systems</a>
-
-</li></ul>
- 
-<div id="Computer Science-Web"><h2 id="Web" class="header justcenter"><a href="#Computer Science-Web">Web</a></h2></div>
-
-<ul>
-<li>
-<a href="WebDev/index.html">WebDev</a>
-
-</li></ul>
 </div>
   
 
