--- a/src/Notes/ComputerScience/CA/ECS/index.html
+++ b/src/Notes/ComputerScience/CA/ECS/index.html
@@ -46,6 +46,9 @@ Hardware
 <li>
 <a href="01.html">Boolean Logic</a>
 
+</li><li>
+<a href="02.html">Boolean Arithmetic</a>
+
 </li></ol>
 </li></ol>
 </div>
