--- a/src/Notes/Math/index.html
+++ b/src/Notes/Math/index.html
@@ -42,7 +42,7 @@
 
 <ol>
 <li>
-<a href="Pre-Calculus/AGAAT/index.html">A Graphical Approach to Algebra and Trigonometry</a>
+<a href="Pre-Calculus/AGAA/index.html">A Graphical Approach to Algebra and Trigonometry</a>
 
 </li></ol>
 </div>
