Fix centering [skip ci]

--- a/src/Notes/ComputerScience/index.html
+++ b/src/Notes/ComputerScience/index.html
@@ -40,14 +40,12 @@
 
 <div id="Computer Science-Computer Architecture"><h2 id="Computer Architecture" class="header"><a href="#Computer Science-Computer Architecture">Computer Architecture</a></h2></div>
 
-<ul>
+<ol>
 <li>
 <a href="CA/ECS/index.html">The Elements of Computer Systems</a>
 
-</li></ul>
-<hr>
- 
-<div id="Computer Science-Web"><h2 id="Web" class="header justcenter"><a href="#Computer Science-Web">Web</a></h2></div>
+</li></ol>
+<div id="Computer Science-Web"><h2 id="Web" class="header"><a href="#Computer Science-Web">Web</a></h2></div>
 
 <ul>
 <li>
