--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -113,6 +113,9 @@ Trigonometric Functions and Applications.
 </li><li>
 <a href="08_03.html">Right Triangles and Evaluating Trigonometric Functions</a>
 
+</li><li>
+<a href="08_04.html">Applications of Right Triangles</a>
+
 </li></ol>
 </li></ol>
 </div>
