[ECS] 03: start notes [skip ci]

--- a/src/Notes/ComputerScience/CA/ECS/02.html
+++ b/src/Notes/ComputerScience/CA/ECS/02.html
@@ -180,7 +180,7 @@ We either set the \(x\) and \(y\) inputs to \(0\), or not
 We either negate the resulting values, or not
 
 </li><li>
-We compute either \(+\) or \(&amp;\) on the preprocessed values
+We compute either \(+\) or \(\&amp;\) on the preprocessed values
 
 </li><li>
 We either negate the resulting value, or not. 
