--- a/src/Notes/ComputerScience/CA/ECS/index.html
+++ b/src/Notes/ComputerScience/CA/ECS/index.html
@@ -49,6 +49,9 @@ Hardware
 </li><li>
 <a href="02.html">Boolean Arithmetic</a>
 
+</li><li>
+<a href="03.html">Memory</a>
+
 </li></ol>
 </li></ol>
 </div>
